[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/GameCode/Menu/VideoSettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Data/Theme/THEME_Garret.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Data/Theme/THEME_GarretBold.tres" type="Theme" id=3]

[sub_resource type="InputEventAction" id=3]
action = "ui_cancel"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="VideoSettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -102.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )
alignment = 1

[node name="ButtonBack" type="Button" parent="HBoxContainer"]
margin_right = 1007.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 1.11
theme = ExtResource( 3 )
shortcut_in_tooltip = false
shortcut = SubResource( 4 )
text = "Back"
flat = true

[node name="Confirm" type="Button" parent="HBoxContainer"]
margin_left = 1011.0
margin_right = 1920.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 0
shortcut_in_tooltip = false
text = "Confirm"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -491.5
margin_top = -316.0
margin_right = 491.5
margin_bottom = 316.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 983.0
margin_bottom = 632.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_right = 983.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="WindowLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_top = 11.0
margin_right = 489.0
margin_bottom = 91.0
size_flags_horizontal = 3
text = "Window"

[node name="WindowMenu" type="MenuButton" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 493.0
margin_right = 983.0
margin_bottom = 102.0
focus_neighbour_top = NodePath("../../../../HBoxContainer/ButtonBack")
focus_neighbour_bottom = NodePath("../../HBoxContainer2/ResolutionMenu")
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
shortcut_in_tooltip = false
text = "Windowed"
items = [ "Windowed", null, 0, false, false, 0, 0, null, "", false, "Fullscreen", null, 0, false, false, 1, 0, null, "", false, "Borderless", null, 0, false, false, 2, 0, null, "", false ]

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 983.0
margin_bottom = 208.0
size_flags_vertical = 3
alignment = 1

[node name="ResolutionLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_top = 11.0
margin_right = 489.0
margin_bottom = 91.0
size_flags_horizontal = 3
text = "Resolution"

[node name="ResolutionMenu" type="MenuButton" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 493.0
margin_right = 983.0
margin_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbour_top = NodePath("../../HBoxContainer/WindowMenu")
focus_neighbour_bottom = NodePath("../../HBoxContainer4/MSAAButton")
focus_mode = 2
size_flags_horizontal = 3
shortcut_in_tooltip = false
text = "0000x0000"
items = [ "1920x1080", null, 0, false, false, 0, 0, null, "", false, "1600x900", null, 0, false, false, 1, 0, null, "", false, "1366x768", null, 0, false, false, 2, 0, null, "", false, "1024x768", null, 0, false, false, 3, 0, null, "", false ]

[node name="HBoxContainer4" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 212.0
margin_right = 983.0
margin_bottom = 314.0
size_flags_vertical = 3

[node name="MSAALabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_top = 11.0
margin_right = 489.0
margin_bottom = 91.0
size_flags_horizontal = 3
text = "MSAA"

[node name="MSAAButton" type="MenuButton" parent="ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_left = 493.0
margin_right = 983.0
margin_bottom = 102.0
focus_neighbour_top = NodePath("../../HBoxContainer2/ResolutionMenu")
focus_neighbour_bottom = NodePath("../../HBoxContainer3/AnisotropicMenu")
focus_mode = 2
size_flags_horizontal = 3
shortcut_in_tooltip = false
text = "2x"
items = [ "Disabled", null, 0, false, false, 0, 0, null, "", false, "2x", null, 0, false, false, 1, 0, null, "", false, "4x", null, 0, false, false, 2, 0, null, "", false, "8x", null, 0, false, false, 3, 0, null, "", false, "16x", null, 0, false, false, 4, 0, null, "", false ]

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 318.0
margin_right = 983.0
margin_bottom = 420.0
size_flags_vertical = 3

[node name="AnisotropicLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_top = 11.0
margin_right = 489.0
margin_bottom = 91.0
size_flags_horizontal = 3
text = "Anisotropic"

[node name="AnisotropicMenu" type="MenuButton" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 493.0
margin_right = 983.0
margin_bottom = 102.0
focus_neighbour_top = NodePath("../../HBoxContainer4/MSAAButton")
focus_neighbour_bottom = NodePath("../../HBoxContainer5/FXAACheck")
focus_mode = 2
size_flags_horizontal = 3
shortcut_in_tooltip = false
text = "16"
items = [ "1", null, 0, false, false, 0, 0, null, "", false, "2", null, 0, false, false, 1, 0, null, "", false, "3", null, 0, false, false, 2, 0, null, "", false, "4", null, 0, false, false, 3, 0, null, "", false, "5", null, 0, false, false, 4, 0, null, "", false, "6", null, 0, false, false, 5, 0, null, "", false, "7", null, 0, false, false, 6, 0, null, "", false, "8", null, 0, false, false, 7, 0, null, "", false, "9", null, 0, false, false, 8, 0, null, "", false, "10", null, 0, false, false, 9, 0, null, "", false, "11", null, 0, false, false, 10, 0, null, "", false, "12", null, 0, false, false, 11, 0, null, "", false, "13", null, 0, false, false, 12, 0, null, "", false, "14", null, 0, false, false, 13, 0, null, "", false, "15", null, 0, false, false, 14, 0, null, "", false, "16", null, 0, false, false, 15, 0, null, "", false ]

[node name="HBoxContainer5" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 424.0
margin_right = 983.0
margin_bottom = 526.0
size_flags_vertical = 3

[node name="FXAALabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer5"]
margin_top = 11.0
margin_right = 725.0
margin_bottom = 91.0
size_flags_horizontal = 3
text = "FXAA"

[node name="FXAACheck" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer5"]
margin_left = 729.0
margin_right = 746.0
margin_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbour_top = NodePath("../../HBoxContainer3/AnisotropicMenu")
focus_neighbour_bottom = NodePath("../../HBoxContainer6/VSyncCheck")
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.35
shortcut_in_tooltip = false
align = 1
icon_align = 1

[node name="HBoxContainer6" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
margin_top = 530.0
margin_right = 983.0
margin_bottom = 632.0
size_flags_vertical = 3

[node name="VSyncLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer6"]
margin_top = 11.0
margin_right = 725.0
margin_bottom = 91.0
size_flags_horizontal = 3
text = "V-Sync"

[node name="VSyncCheck" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer6"]
margin_left = 729.0
margin_right = 746.0
margin_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbour_top = NodePath("../../HBoxContainer5/FXAACheck")
focus_neighbour_bottom = NodePath("../../../../HBoxContainer/ButtonBack")
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.35
shortcut_in_tooltip = false
align = 1
icon_align = 1

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.124074
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 3 )
text = "Video"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="visibility_changed" from="." to="." method="_on_VideoSettingsMenu_visibility_changed"]
[connection signal="button_up" from="HBoxContainer/ButtonBack" to="." method="_on_ButtonBack_button_up"]
[connection signal="button_up" from="HBoxContainer/Confirm" to="." method="_on_Confirm_button_up"]
[connection signal="button_up" from="ScrollContainer/VBoxContainer/HBoxContainer/WindowMenu" to="." method="_on_WindowMenu_button_up"]
[connection signal="button_up" from="ScrollContainer/VBoxContainer/HBoxContainer2/ResolutionMenu" to="." method="_on_ResolutionMenu_button_up"]
[connection signal="button_up" from="ScrollContainer/VBoxContainer/HBoxContainer4/MSAAButton" to="." method="_on_MSAAButton_button_up"]
[connection signal="button_up" from="ScrollContainer/VBoxContainer/HBoxContainer3/AnisotropicMenu" to="." method="_on_AnisotropicMenu_button_up"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/HBoxContainer5/FXAACheck" to="." method="_on_FXAACheck_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/HBoxContainer6/VSyncCheck" to="." method="_on_VSyncCheck_toggled"]
